[tool.poetry]
authors = ["William Sampaio <56176702+WilliamSampaio@users.noreply.github.com>"]
description = "Api To Do app with FastAPI."
license = "MIT"
name = "ToDo-API"
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
fastapi = "^0.100.0"
uvicorn = "^0.22.0"
pytest = "^7.4.0"
requests = "^2.31.0"
httpx = "^0.24.1"

[tool.poetry.group.dev.dependencies]
blue = "^0.9.1"
isort = "^5.12.0"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]
